# TDMScli

./: .gitignore  README.md  pyproject.toml
src/tdmscli/: display.py  folder.py  loader.py  scratch.py  tdms_scratch.py
tests/: test_tdmscli.py
