[tool.poetry]
name = "TDMScli"
version = "0.1.0"
description = "TDMS CLI File Utility App"
authors = ["Connor Sahleen <Connor.Sahleen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.4.2"
rich = "^12.4.4"
npTDMS = "^1.5.0"
pydantic = "^1.9.1"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
